--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
 - 4.1.1
 before_script:
 - gem install percy-cli
-after_success:
-- echo $TRAVIS_PULL_REQUEST
+script:
+- npm test
 - '[ "$TRAVIS_SECURE_ENV_VARS" = "true" ] && npm run perceptual-diff'
 sudo: false
 deploy:
