--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ node_js:
 - 4.1.1
 before_script:
 - gem install percy-cli
-script:
-- npm test
+after_success:
 - '[ "$TRAVIS_SECURE_ENV_VARS" = "true" ] && npm run perceptual-diff'
 sudo: false
 deploy:
